correct `main` in `package.json`

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "flow-lens",
   "version": "1.0.0-alpha",
   "description": "type-safe simple lenses",
-  "main": "index.js",
+  "main": "dist",
   "repository": "git@github.com:soenkehahn/flow-lens",
   "author": "Sönke Hahn <soenkehahn@gmail.com>",
   "license": "MIT",
